--- a/genshin-rmm/fonts/font.css
+++ b/genshin-rmm/fonts/font.css
@@ -25,6 +25,6 @@
 @font-face {
   font-family: "Micro 5";
   font-weight: 400;
-  font-display: swap;
+  font-display: block;
   src: url(./Micro-5-400.woff2);
 }
